application/brennoflavio/kittygram/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kittygram
  namespace: kittygram
spec:
  type: ClusterIP
  selector:
    app: kittygram
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
