application/brennoflavio/kittygram/valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kittygram-valkey
  namespace: kittygram
spec:
  selector:
    app: kittygram-valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: 6379
